More work on L & F and broken functionality on edits pane

--- a/app/assets/components/elements/api-request.html
+++ b/app/assets/components/elements/api-request.html
@@ -33,7 +33,9 @@
           notify: true
         },
         loading: {
-            notify: true
+            type:    Boolean,
+            value:   false,
+            notify:  true
         },
         method: {
           type: String,
