Improve annotation collapsing and display

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -100,6 +100,7 @@
           background:    #eeeeee;
       }
 
+      /* iron-collapse doesn't work correctly when it is hidden with display:none */
       #rhs [hidden] {
           display:    block  !important;
           visibility: hidden !important;
