--- a/app/assets/components/ui-elements/oj-user-tag.html
+++ b/app/assets/components/ui-elements/oj-user-tag.html
@@ -20,6 +20,7 @@
       <style>
 
           :host {
+              display:       block;
               font-size:     32px;/* Approximation due to font substitution */
               font-weight:   700;
               line-height:   30px;/* Approximation due to font substitution */
