--- a/app/assets/components/ui-elements/oj-assigned-users-list.html
+++ b/app/assets/components/ui-elements/oj-assigned-users-list.html
@@ -8,7 +8,8 @@
                     items="{{sortedAssignments}}"
                     filter="isSubmittor"
                     as="assignment">
-              <oj-user-tag assignment="{{assignment}}"></oj-user-tag>
+              <oj-user-tag class="submittor"
+                           assignment="{{assignment}}"></oj-user-tag>
           </template>
       </div>
 
@@ -20,7 +21,8 @@
                     items="{{sortedAssignments}}"
                     filter="isEditor"
                     as="assignment">
-              <oj-user-tag assignment="{{assignment}}"></oj-user-tag>
+              <oj-user-tag class="editor"
+                           assignment="{{assignment}}"></oj-user-tag>
           </template>
       </div>
 
@@ -32,13 +34,14 @@
                     items="{{sortedAssignments}}"
                     filter="isReviewer"
                     as="assignment">
-              <oj-user-tag assignment="{{assignment}}"
+              <oj-user-tag class="reviewer"
+                           assignment="{{assignment}}"
                            showcompleted="{{showCompleted}}"
                            removable="{{editable}}"
                            on-remove-user="removeReviewer"></oj-user-tag>
           </template>
 
-          <oj-user-tag assignment="{{anonymousReviewersTag(paper.assigned_users)}}"></oj-user-tag>
+          <oj-user-tag class="reviewer anonymous" assignment="{{anonymousReviewersTag(paper.assigned_users)}}"></oj-user-tag>
 
           <template is="dom-if" if="{{editable}}">
               <div class=add_reviewer>+ Add a Reviewer:</div>
@@ -62,6 +65,13 @@
               color:       #c0cbcf;
               font-size:   20px;/* Approximation due to font substitution */
               font-weight: 500;
+          }
+
+          oj-user-tag.anonymous {
+              color:       #678492;
+              font-size:   24px;
+              font-style:  italic;
+              font-weight: 400;
           }
 
           oj-user-tag, oj-user-lookup {
